Release REST API v0.6.1
